--- a/kompren-core/fr.inria.diverse.kompren.root/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.root/pom.xml
@@ -19,6 +19,7 @@
 		<emf.version>2.8.0-v20120911-0500</emf.version>
 		<osgi.version>4.2.0</osgi.version>
 		<bundle.vendor>IRISA/Inria</bundle.vendor>
+		<xtend.version>2.4.3</xtend.version>
     	<eclipse.repository.version>indigo</eclipse.repository.version>
 	</properties>
 
