--- a/kompren-core/fr.inria.diverse.kompren.slicer.model/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.slicer.model/pom.xml
@@ -6,9 +6,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>fr.inria.diverse.model</artifactId>
+    <artifactId>fr.inria.diverse.kompren.model</artifactId>
     <packaging>bundle</packaging>
-    <name>fr.inria.diverse.model :: Kompren model</name>
+    <name>fr.inria.diverse.kompren.model :: Kompren model</name>
     
     <parent>
         <groupId>fr.inria.diverse</groupId>
