--- a/kompren-core/fr.inria.diverse.kompren.root/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.root/pom.xml
@@ -14,6 +14,7 @@
 
 	<properties>
 		<kermeta.version>3.0-SNAPSHOT</kermeta.version>
+		<scala.version>2.10.2</scala.version>
 		<kompren.version>3.0-SNAPSHOT</kompren.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<emf.version>2.8.0-v20120911-0500</emf.version>
