--- a/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
@@ -17,102 +17,64 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>.</directory>
-			</resource>
-		</resources>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Bundle-SymbolicName>org.kermeta.${project.artifactId};singleton:=true</Bundle-SymbolicName>
-                            <Bundle-Name>org.kermeta.${project.artifactId}</Bundle-Name>
-		                    <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
-							<Bundle-Version>${bundle.version}</Bundle-Version>
-                            <Manifest-Version>1.0</Manifest-Version>
-                            <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-                            <Export-Package>
-                            org.kermeta.kompren,
-                            org.kermeta.kompren.lexer,
-                            org.kermeta.kompren.parser,
-                            org.kermeta.kompren.parser.sub,
-                            org.kermeta.kompren.resolver
-                            </Export-Package>
-                            <Require-Bundle>
-                            org.scala-ide.scala.library
-                            </Require-Bundle>
-                            <Import-Package>
-							kompren,
-							kompren.impl,
-							kompren.util,
-							org.eclipse.emf.common.notify,
-							org.eclipse.emf.common.util,
-							org.eclipse.emf.ecore,
-							org.eclipse.emf.ecore.impl,
-							org.eclipse.emf.ecore.resource,
-							org.eclipse.emf.ecore.resource.impl,
-							org.eclipse.emf.ecore.util,
-							org.eclipse.emf.ecore.xmi,
-							org.eclipse.emf.ecore.xmi.impl,
-							org.osgi.framework
-                            </Import-Package>
-                        </manifestEntries>		            
-                    </archive>
+                    <instructions>
+                        <Bundle-SymbolicName>fr.inria.diverse.kompren.parser; singleton=true</Bundle-SymbolicName>
+                        <Bundle-Name>${project.name}</Bundle-Name>
+                        <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
+<!--                         <Bundle-Version>${bundle.version}</Bundle-Version> -->
+                        <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
+                        <Export-Package>
+                        	org.kermeta.kompren.*
+                        </Export-Package>
+                        <Import-Package>
+                        	kompren.*,
+                        	scala.*,
+                        	org.eclipse.emf.*,
+                        	org.osgi.framework;version="[1.5,2)"</Import-Package>
+                        <Bundle-ClassPath>.</Bundle-ClassPath>
+                    </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-eclipse-plugin</artifactId>
-			    <version>2.8</version>
-			    <!-- see http://maven.apache.org/plugins/maven-eclipse-plugin/eclipse-mojo.html for more information -->
-			    <configuration>
-			      <downloadSources>true</downloadSources>
-			      <downloadJavadocs>true</downloadJavadocs>
-			      <projectnatures>
-			        <projectnature>org.scala-ide.sdt.core.scalanature</projectnature>
-			        <projectnature>org.eclipse.jdt.core.javanature</projectnature>
-			      </projectnatures>
-			      <buildcommands>
-			        <buildcommand>org.scala-ide.sdt.core.scalabuilder</buildcommand>
-			      </buildcommands>
-			      <classpathContainers>
-			        <classpathContainer>org.scala-ide.sdt.launching.SCALA_CONTAINER</classpathContainer>
-			        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-			      </classpathContainers>
-			      <excludes> 
-			        <exclude>org.scala-lang:scala-library</exclude>
-			        <!-- <exclude>org.scala-lang:scala-compiler</exclude> -->
-			      </excludes>
-			      <sourceIncludes>
-			        <sourceInclude>**/*.scala</sourceInclude>
-			        <sourceInclude>**/*.java</sourceInclude>
-			      </sourceIncludes>
-			      <useProjectReferences>false</useProjectReferences>
-			    </configuration>
-			  </plugin>
-			  <plugin>
-		        <groupId>org.codehaus.mojo</groupId>
-		        <artifactId>build-helper-maven-plugin</artifactId>
-		        <executions>
-		          <execution>
-		            <id>add-source</id>
-		            <phase>generate-sources</phase>
-		            <goals>
-		              <goal>add-source</goal>
-		            </goals>
-		            <configuration>
-		              <sources>
-		                <source>src/main/scala</source>
-		              </sources>
-		            </configuration>
-		          </execution>
-		        </executions>
-		      </plugin>
+			<plugin>
+				<groupId>org.scala-tools</groupId>
+				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.14.1</version>
+		        <configuration>
+		          <args>
+		            <arg>-optimise</arg>
+		          </args>
+		        </configuration>
+				<executions>
+					<execution>
+						<id>compile</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<phase>compile</phase>
+					</execution>
+	                <execution>
+	                   <phase>process-resources</phase>
+	                   <goals>
+	                     <goal>compile</goal>
+	                   </goals>
+	                </execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
     
