Plugin params updated

--- a/kompren-core/fr.inria.diverse.kompren.slicer.model/plugin.properties
+++ b/kompren-core/fr.inria.diverse.kompren.slicer.model/plugin.properties
@@ -2,4 +2,4 @@
 # Triskell Team
 
 pluginName = Kompren Slicer Model
-providerName = Triskell Team - INRIA/IRISA
+providerName = IRISA/Inria Diverse Team
