--- a/kompren-core/fr.inria.diverse.kompren.model.editor/plugin.properties
+++ b/kompren-core/fr.inria.diverse.kompren.model.editor/plugin.properties
@@ -1,7 +1,7 @@
 #
 
 pluginName = Kompren Editor
-providerName = www.example.org
+providerName = IRISA/Inria Diverse Team
 
 _UI_KomprenEditor_menu = &Kompren Editor
 
