Can slice model from a sliced metamodel

--- a/kompren-examples/fr.inria.diverse.kompren.oclSlicer/META-INF/xtend-gen/fr.inria.diverse.kompren.oclSlicer.k3_aspect_mapping.properties
+++ b/kompren-examples/fr.inria.diverse.kompren.oclSlicer/META-INF/xtend-gen/fr.inria.diverse.kompren.oclSlicer.k3_aspect_mapping.properties
@@ -1,31 +1,11 @@
-java.lang.Object = fr.inria.triskell.kompren.oclSlicer.OCLSlicerVisitor
-org.eclipse.ocl.ecore.AssociationClassCallExp = fr.inria.triskell.kompren.oclSlicer.AssociationClassCallExpAspect
-org.eclipse.ocl.ecore.ExpressionInOCL = fr.inria.triskell.kompren.oclSlicer.ExpressionInOCLAspect
-org.eclipse.ocl.ecore.OCLExpression = fr.inria.triskell.kompren.oclSlicer.OCLExpressionAspect
-org.eclipse.ocl.utilities.TypedElement = fr.inria.triskell.kompren.oclSlicer.TypedElementAspect
-org.eclipse.ocl.ecore.CallExp = fr.inria.triskell.kompren.oclSlicer.CallExpAspect
-org.eclipse.ocl.ecore.FeatureCallExp = fr.inria.triskell.kompren.oclSlicer.FeatureCallExpAspect
-org.eclipse.ocl.ecore.IfExp = fr.inria.triskell.kompren.oclSlicer.IfExpAspect
-org.eclipse.ocl.ecore.IterateExp = fr.inria.triskell.kompren.oclSlicer.IterateExpAspect
-org.eclipse.ocl.ecore.IteratorExp = fr.inria.triskell.kompren.oclSlicer.IteratorExpAspect
-org.eclipse.ocl.ecore.LetExp = fr.inria.triskell.kompren.oclSlicer.LetExpAspect
-org.eclipse.ocl.ecore.LiteralExp = fr.inria.triskell.kompren.oclSlicer.LiteralExpAspect
-org.eclipse.ocl.ecore.CollectionItem = fr.inria.triskell.kompren.oclSlicer.CollectionItemAspect
-org.eclipse.ocl.ecore.CollectionLiteralPart = fr.inria.triskell.kompren.oclSlicer.CollectionLiteralPartAspect
-org.eclipse.ocl.ecore.CollectionLiteralExp = fr.inria.triskell.kompren.oclSlicer.CollectionLiteralExpAspect
-org.eclipse.ocl.ecore.CollectionRange = fr.inria.triskell.kompren.oclSlicer.CollectionRangeAspect
-org.eclipse.ocl.ecore.EnumLiteralExp = fr.inria.triskell.kompren.oclSlicer.EnumLiteralExpAspect
-org.eclipse.ocl.ecore.LoopExp = fr.inria.triskell.kompren.oclSlicer.LoopExpAspect
-org.eclipse.ocl.ecore.MessageExp = fr.inria.triskell.kompren.oclSlicer.MessageExpAspect
-org.eclipse.ocl.ecore.SendSignalAction = fr.inria.triskell.kompren.oclSlicer.SendSignalActionAspect
-org.eclipse.ocl.ecore.CallOperationAction = fr.inria.triskell.kompren.oclSlicer.CallOperationActionAspect
-org.eclipse.ocl.ecore.StateExp = fr.inria.triskell.kompren.oclSlicer.StateExpAspect
-org.eclipse.ocl.ecore.TupleLiteralExp = fr.inria.triskell.kompren.oclSlicer.TupleLiteralExpAspect
-org.eclipse.ocl.ecore.TypeExp = fr.inria.triskell.kompren.oclSlicer.TypeExpAspect
-org.eclipse.ocl.ecore.TupleLiteralPart = fr.inria.triskell.kompren.oclSlicer.TupleLiteralPartAspect
-org.eclipse.ocl.ecore.OperationCallExp = fr.inria.triskell.kompren.oclSlicer.OperationCallExpAspect
-org.eclipse.ocl.ecore.PropertyCallExp = fr.inria.triskell.kompren.oclSlicer.PropertyCallExpAspect
-org.eclipse.ocl.ecore.NavigationCallExp = fr.inria.triskell.kompren.oclSlicer.NavigationCallExpAspect
-org.eclipse.ocl.ecore.Variable = fr.inria.triskell.kompren.oclSlicer.VariableAspect
-org.eclipse.ocl.ecore.VariableExp = fr.inria.triskell.kompren.oclSlicer.VariableExpAspect
-org.eclipse.ocl.ecore.Constraint = fr.inria.triskell.kompren.oclSlicer.ConstraintAspect
+java.lang.Object = fr.inria.triskell.kompren.oclSlicer.LRBASlicerVisitor
+LRBAC.Session = fr.inria.triskell.kompren.oclSlicer.SessionAspect
+LRBAC.Role = fr.inria.triskell.kompren.oclSlicer.RoleAspect
+LRBAC.Object = fr.inria.triskell.kompren.oclSlicer.ObjectAspect
+LRBAC.Read = fr.inria.triskell.kompren.oclSlicer.ReadAspect
+LRBAC.Execute = fr.inria.triskell.kompren.oclSlicer.ExecuteAspect
+LRBAC.Write = fr.inria.triskell.kompren.oclSlicer.WriteAspect
+LRBAC.Operation = fr.inria.triskell.kompren.oclSlicer.OperationAspect
+LRBAC.Permission = fr.inria.triskell.kompren.oclSlicer.PermissionAspect
+LRBAC.User = fr.inria.triskell.kompren.oclSlicer.UserAspect
+LRBAC.Location = fr.inria.triskell.kompren.oclSlicer.LocationAspect
