pushing the textual editor for Kompren

--- a/kompren-examples/fr.inria.diverse.kompren.oclSlicer/META-INF/xtend-gen/fr.inria.diverse.kompren.oclSlicer.k3_aspect_mapping.properties
+++ b/kompren-examples/fr.inria.diverse.kompren.oclSlicer/META-INF/xtend-gen/fr.inria.diverse.kompren.oclSlicer.k3_aspect_mapping.properties
@@ -1,11 +1,15 @@
-java.lang.Object = fr.inria.triskell.kompren.oclSlicer.LRBASlicerVisitor
-LRBAC.Session = fr.inria.triskell.kompren.oclSlicer.SessionAspect
-LRBAC.Role = fr.inria.triskell.kompren.oclSlicer.RoleAspect
-LRBAC.Object = fr.inria.triskell.kompren.oclSlicer.ObjectAspect
-LRBAC.Read = fr.inria.triskell.kompren.oclSlicer.ReadAspect
-LRBAC.Execute = fr.inria.triskell.kompren.oclSlicer.ExecuteAspect
-LRBAC.Write = fr.inria.triskell.kompren.oclSlicer.WriteAspect
-LRBAC.Operation = fr.inria.triskell.kompren.oclSlicer.OperationAspect
-LRBAC.Permission = fr.inria.triskell.kompren.oclSlicer.PermissionAspect
-LRBAC.User = fr.inria.triskell.kompren.oclSlicer.UserAspect
-LRBAC.Location = fr.inria.triskell.kompren.oclSlicer.LocationAspect
+java.lang.Object = fr.inria.triskell.kompren.oclSlicer.EcoreSlicerVisitor
+org.eclipse.emf.ecore.EModelElement = fr.inria.triskell.kompren.oclSlicer.EModelElementAspect
+org.eclipse.emf.ecore.EClassifier = fr.inria.triskell.kompren.oclSlicer.EClassifierAspect
+org.eclipse.emf.ecore.EClass = fr.inria.triskell.kompren.oclSlicer.EClassAspect
+org.eclipse.emf.ecore.ENamedElement = fr.inria.triskell.kompren.oclSlicer.ENamedElementAspect
+org.eclipse.emf.ecore.EPackage = fr.inria.triskell.kompren.oclSlicer.EPackageAspect
+org.eclipse.emf.ecore.EDataType = fr.inria.triskell.kompren.oclSlicer.EDataTypeAspect
+org.eclipse.emf.ecore.EEnum = fr.inria.triskell.kompren.oclSlicer.EENumAspect
+org.eclipse.emf.ecore.EEnumLiteral = fr.inria.triskell.kompren.oclSlicer.EENumLiteralAspect
+org.eclipse.emf.ecore.ETypedElement = fr.inria.triskell.kompren.oclSlicer.ETypedElementAspect
+org.eclipse.emf.ecore.EOperation = fr.inria.triskell.kompren.oclSlicer.EOperationAspect
+org.eclipse.emf.ecore.EAttribute = fr.inria.triskell.kompren.oclSlicer.EAttributeAspect
+org.eclipse.emf.ecore.EParameter = fr.inria.triskell.kompren.oclSlicer.EParameterAspect
+org.eclipse.emf.ecore.EReference = fr.inria.triskell.kompren.oclSlicer.EReferenceAspect
+org.eclipse.emf.ecore.EStructuralFeature = fr.inria.triskell.kompren.oclSlicer.EStructuralFeatureAspect
