--- a/kompren-core/fr.inria.diverse.kompren.parser/.classpath
+++ b/kompren-core/fr.inria.diverse.kompren.parser/.classpath
@@ -1,22 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src" including="**/*.scala|**/*.java|**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/fr/inria/diverse/fr.inria.diverse.kompren.model/3.0-SNAPSHOT/fr.inria.diverse.kompren.model-3.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.common/2.8.0-v20120911-0500/org.eclipse.emf.common-2.8.0-v20120911-0500.jar" sourcepath="M2_REPO/org/eclipse/emf/org.eclipse.emf.common/2.8.0-v20120911-0500/org.eclipse.emf.common-2.8.0-v20120911-0500-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/ablouin/.m2/repository/org/eclipse/emf/org.eclipse.emf.common/2.8.0-v20120911-0500/org.eclipse.emf.common-2.8.0-v20120911-0500-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore/2.8.0-v20120911-0500/org.eclipse.emf.ecore-2.8.0-v20120911-0500.jar" sourcepath="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore/2.8.0-v20120911-0500/org.eclipse.emf.ecore-2.8.0-v20120911-0500-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/ablouin/.m2/repository/org/eclipse/emf/org.eclipse.emf.ecore/2.8.0-v20120911-0500/org.eclipse.emf.ecore-2.8.0-v20120911-0500-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore.xmi/2.8.0-v20120911-0500/org.eclipse.emf.ecore.xmi-2.8.0-v20120911-0500.jar" sourcepath="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore.xmi/2.8.0-v20120911-0500/org.eclipse.emf.ecore.xmi-2.8.0-v20120911-0500-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/ablouin/.m2/repository/org/eclipse/emf/org.eclipse.emf.ecore.xmi/2.8.0-v20120911-0500/org.eclipse.emf.ecore.xmi-2.8.0-v20120911-0500-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
