--- a/kompren-core/fr.inria.diverse.kompren.compiler/.classpath
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/.classpath
@@ -25,5 +25,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="/media/data/opt/k3/plugins/org.eclipse.emf.codegen.ecore_2.9.1.v20130902-0605.jar"/>
+	<classpathentry kind="lib" path="/media/data/opt/k3/plugins/org.eclipse.emf.codegen_2.9.0.v20130902-0605.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
