--- a/kompren-examples/examples.model/pom.xml
+++ b/kompren-examples/examples.model/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>fr.inria.diverse.kompren.examples.model</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
   <name>fr.inria.diverse.kompren.examples.model :: Data model for Kompren examples</name>
   
     <parent>
@@ -39,6 +38,27 @@
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.common</artifactId>
 			<version>${emf.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>fr.inria.diverse</groupId>
+            <artifactId>fr.inria.diverse.kompren.model</artifactId>
+            <version>${kompren.version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.eclipse.xtend</groupId>
+			<artifactId>org.eclipse.xtend.lib</artifactId>
+			<version>${xtend.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.inria.diverse</groupId>
+			<artifactId>fr.inria.diverse.k3.core</artifactId>
+			<version>${kermeta.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
