--- a/kompren-examples/examples.lowerTypesSlicer/.classpath
+++ b/kompren-examples/examples.lowerTypesSlicer/.classpath
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.xtend.XTEND_CONTAINER"/>
+	<classpathentry kind="src" path="src/test/xtend-gen"/>
 	<classpathentry kind="src" path="src/main/xtend-gen"/>
-	<classpathentry kind="src" path="src/main/xtend"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/examples.model"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/fr.inria.diverse.k3.core"/>
-	<classpathentry kind="lib" path="/media/data/opt/k3/plugins/org.eclipse.emf.common_2.9.1.v20130827-0309.jar"/>
-	<classpathentry kind="lib" path="/media/data/opt/k3/plugins/org.eclipse.emf.ecore.xmi_2.9.1.v20130827-0309.jar"/>
-	<classpathentry kind="lib" path="/media/data/opt/k3/plugins/org.eclipse.emf.ecore_2.9.1.v20130827-0309.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
