--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -25,6 +25,10 @@
 							<goal>xtend-install-debug-info</goal>
 							<goal>xtend-test-install-debug-info</goal>
 						</goals>
+                        <configuration>
+                                <outputDirectory>${xtendGenDirectory}</outputDirectory>
+								<testOutputDirectory>${xtendGenDirectory}-test</testOutputDirectory>
+                        </configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -39,16 +43,26 @@
 		</plugins>
 	</build>
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>codegen-ecore</artifactId> -->
-<!-- 			<version>2.2.3</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>codegen</artifactId> -->
-<!-- 			<version>2.2.3</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.eclipse.jdt</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0-v_771</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>runtime</artifactId>
+			<version>3.9.0-v20130326-1255</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+			<version>2.9.1-v20130902-0605</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.codegen</artifactId>
+			<version>2.9.0-v20130902-0605</version>
+		</dependency>
         <dependency>
             <groupId>fr.inria.diverse</groupId>
             <artifactId>fr.inria.diverse.kompren.model</artifactId>
@@ -82,7 +96,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
