fixed: metamodels should be exported

--- a/kompren-core/fr.inria.diverse.kompren.model/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.model/pom.xml
@@ -19,6 +19,9 @@
     <build>
 		<resources>
 			<resource>
+				<directory>src/resources</directory>
+			</resource>
+			<resource>
 				<directory>.</directory>
 				<includes>
 					<include>plugin.properties</include>
