--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/pom.xml
@@ -106,10 +106,15 @@
 			<version>${emf.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.emf.ecore</groupId>
+			<artifactId>edit</artifactId>
+			<version>2.8.0-v20131212-0558</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>edit</artifactId>
-			<version>2.8.0-v20120917-0436</version>
-		</dependency>
+			<version>2.9.0-v20131212-0558</version>
+		</dependency>  
         
      <dependency>
       <groupId>org.kermeta.eclipse</groupId>
