--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.properties
@@ -26,7 +26,7 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = Kompren
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
@@ -35,7 +35,7 @@ _UI_KomprenModelWizard_description = Create a new Kompren model
 
 _UI_KomprenEditor_label = Kompren Model Editor
 
-_UI_KomprenEditorFilenameDefaultBase = My
+_UI_KomprenEditorFilenameDefaultBase = myslicer
 _UI_KomprenEditorFilenameExtensions = kompren
 
 _UI_Wizard_label = New
