--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
@@ -97,20 +97,25 @@
             <version>${kompren.version}</version>
         </dependency>
      <dependency>
-      <groupId>org.kermeta.eclipse</groupId>
-      <artifactId>org.eclipse.emf.edit</artifactId>
-      <version>[2.6.0.0,)</version>
+      <groupId>org.eclipse.emf.ecore</groupId>
+      <artifactId>edit</artifactId>
+      <version>[2.8.0.0,)</version>
+    </dependency>   
+     <dependency>
+      <groupId>org.eclipse.emf.edit</groupId>
+      <artifactId>ui</artifactId>
+      <version>[2.9.0.0,)</version>
     </dependency>  
-     <dependency>
-      <groupId>org.kermeta.eclipse</groupId>
-      <artifactId>org.eclipse.emf.ecore.edit</artifactId>
-      <version>[2.6.0.0,)</version>
-    </dependency>   
-     <dependency>
-      <groupId>org.kermeta.eclipse</groupId>
-      <artifactId>org.eclipse.emf.edit.ui</artifactId>
-      <version>[2.6.0.0,)</version>
-    </dependency>   
+	<dependency>
+	    <groupId>org.eclipse.emf.common</groupId>
+	    <artifactId>ui</artifactId>
+	    <version>[2.8.0,]</version>
+	</dependency> 
+	<dependency>
+	    <groupId>org.eclipse.emf</groupId>
+	    <artifactId>common</artifactId>
+	    <version>[2.9.1,)</version>
+	</dependency>
      <dependency>
       <groupId>org.kermeta.eclipse</groupId>
       <artifactId>org.eclipse.core.runtime</artifactId>
