--- a/kompren-core/fr.inria.diverse.kompren.model/build.properties
+++ b/kompren-core/fr.inria.diverse.kompren.model/build.properties
@@ -1,11 +1,12 @@
 # INRIA/IRISA
-# Triskell Team
+# Diverse Team
 
 bin.includes = .,\
+               model/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/main/java/,\
-           src/resources/metamodel/
-output.. = target/classes/
+source.. = src/,\
+           model/
+output.. = bin/
