--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -46,22 +46,22 @@
 		<dependency>
 			<groupId>org.eclipse.jdt</groupId>
 			<artifactId>core</artifactId>
-			<version>3.3.0-v_771</version>
+			<version>[3.3.0,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>runtime</artifactId>
-			<version>3.9.0-v20130326-1255</version>
+			<version>[3.9.0,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
-			<version>2.9.1-v20130902-0605</version>
+			<version>[2.9.1,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.codegen</artifactId>
-			<version>2.9.0-v20130902-0605</version>
+			<version>[2.9.0,)</version>
 		</dependency>
         <dependency>
             <groupId>fr.inria.diverse</groupId>
