using generics in the metamodel

--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
@@ -51,3 +51,4 @@ _UI_VarDecl_varName_feature = Var Name
 _UI_VarDecl_type_feature = Type
 _UI_Unknown_feature = Unspecified
 
+_UI_SlicedElement_domain_feature = Domain
