--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
@@ -52,3 +52,4 @@ _UI_VarDecl_type_feature = Type
 _UI_Unknown_feature = Unspecified
 
 _UI_SlicedElement_domain_feature = Domain
+_UI_SlicedElement_constraints_feature = Constraints
