--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -6,9 +6,9 @@
 	<name>Kompren compiler</name>
 	
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     
 	<build>
@@ -34,10 +34,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -64,7 +64,7 @@
 			<version>[2.9.0,)</version>
 		</dependency>
         <dependency>
-            <groupId>fr.inria.diverse</groupId>
+            <groupId>fr.inria.diverse.kompren</groupId>
             <artifactId>fr.inria.diverse.kompren.model</artifactId>
             <version>${kompren.version}</version>
         </dependency>
@@ -74,9 +74,9 @@
 			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.inria.diverse</groupId>
+			<groupId>fr.inria.diverse.k3</groupId>
 			<artifactId>fr.inria.diverse.k3.core</artifactId>
-			<version>3.0-SNAPSHOT</version>
+			<version>${kermeta.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
