--- a/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
@@ -10,9 +10,9 @@
     <name>fr.inria.diverse.kompren.parser :: Kompren parser</name>
 
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <build>
@@ -69,10 +69,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
         </plugins>
