--- a/kompren-core/fr.inria.diverse.kompren.root/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.root/pom.xml
@@ -6,16 +6,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.inria.diverse</groupId>
+	<groupId>fr.inria.diverse.kompren</groupId>
 	<artifactId>fr.inria.diverse.kompren.root</artifactId>
 	<packaging>pom</packaging>
-	<version>3.0-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<name>fr.inria.diverse.kompren.root :: Root for the projects dedicated to Kompren</name>
 
 	<properties>
-		<kermeta.version>3.0-SNAPSHOT</kermeta.version>
+		<kermeta.version>3.0.0-SNAPSHOT</kermeta.version>
 		<scala.version>2.10.3</scala.version>
-		<kompren.version>3.0-SNAPSHOT</kompren.version>
+		<kompren.version>3.0.0-SNAPSHOT</kompren.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<emf.version>2.9.1-v20130827-0309</emf.version>
 		<osgi.version>4.2.0</osgi.version>
@@ -23,6 +23,8 @@
 		<xtend.version>2.5.1</xtend.version>
 		<xtendGenDirectory>target/generated-sources/xtend</xtendGenDirectory>
     	<eclipse.repository.version>indigo</eclipse.repository.version>
+    	<junit.version>4.11</junit.version>
+    	<java.version>1.7</java.version>
 	</properties>
 
 	<build>
@@ -31,10 +33,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
@@ -51,7 +53,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.5</version>
+				<version>2.4.0</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
