--- a/kompren-editor/fr.inria.diverse.kompren.texteditor/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.texteditor/pom.xml
@@ -10,9 +10,9 @@
     <name>fr.inria.diverse.kompren.texteditor :: Kompren text editor</name>
 
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
   <build>
