--- a/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
@@ -3,10 +3,10 @@
   <artifactId>fr.inria.diverse.kompren.xtext</artifactId>
   
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
-    </parent>  
+        <version>3.0.0-SNAPSHOT</version>
+    </parent>
   
 	<build>
 		<plugins>
