--- a/kompren-examples/examples.k3TransfoFootprint/pom.xml
+++ b/kompren-examples/examples.k3TransfoFootprint/pom.xml
@@ -3,10 +3,10 @@
   <artifactId>fr.inria.diverse.kompren.examples.k3TransfoFootprint</artifactId>
   
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
-    </parent>  
+        <version>3.0.0-SNAPSHOT</version>
+    </parent> 
   
 	<build>
 		<plugins>
@@ -31,10 +31,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -58,7 +58,7 @@
 			<version>${emf.version}</version>
 		</dependency>
         <dependency>
-            <groupId>fr.inria.diverse</groupId>
+            <groupId>fr.inria.diverse.kompren</groupId>
             <artifactId>fr.inria.diverse.kompren.model</artifactId>
             <version>${kompren.version}</version>
         </dependency>
@@ -68,24 +68,24 @@
 			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.inria.diverse</groupId>
+			<groupId>fr.inria.diverse.k3</groupId>
 			<artifactId>fr.inria.diverse.k3.core</artifactId>
 			<version>${kermeta.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.xbase</artifactId>
-			<version>2.5.0</version>
+			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.common.types</artifactId>
-			<version>2.5.0</version>
+			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
   	</dependencies>
