--- a/kompren-examples/examples.model/pom.xml
+++ b/kompren-examples/examples.model/pom.xml
@@ -4,9 +4,9 @@
   <name>fr.inria.diverse.kompren.examples.model :: Data model for Kompren examples</name>
   
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
   
   <build>
@@ -40,7 +40,7 @@
 			<version>${emf.version}</version>
 		</dependency>
         <dependency>
-            <groupId>fr.inria.diverse</groupId>
+            <groupId>fr.inria.diverse.kompren</groupId>
             <artifactId>fr.inria.diverse.kompren.model</artifactId>
             <version>${kompren.version}</version>
         </dependency>
@@ -50,14 +50,14 @@
 			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.inria.diverse</groupId>
+			<groupId>fr.inria.diverse.k3</groupId>
 			<artifactId>fr.inria.diverse.k3.core</artifactId>
 			<version>${kermeta.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
