--- a/kompren-examples/fr.inria.diverse.kompren.oclSlicer/pom.xml
+++ b/kompren-examples/fr.inria.diverse.kompren.oclSlicer/pom.xml
@@ -7,9 +7,9 @@
   <name>fr.inria.diverse.OCLSlicer</name>
 
     <parent>
-        <groupId>fr.inria.diverse</groupId>
+        <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
  	<build>
@@ -31,10 +31,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -47,14 +47,14 @@
 			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.inria.diverse</groupId>
+			<groupId>fr.inria.diverse.k3</groupId>
 			<artifactId>fr.inria.diverse.k3.core</artifactId>
-			<version>3.0-SNAPSHOT</version>
+			<version>${kermeta.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
