new feature: can specify a log to print when classes and relations are visited

--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
@@ -53,3 +53,7 @@ _UI_Unknown_feature = Unspecified
 
 _UI_SlicedElement_domain_feature = Domain
 _UI_SlicedElement_constraints_feature = Constraints
+_UI_Slicer_logVisitClass_feature = Log Visit Class
+_UI_Slicer_logVisitClass_description = Xtend code executed when a class is visited.
+_UI_Slicer_logVisitRelation_feature = Log Visit Relation
+_UI_Slicer_logVisitRelation_description = Xtend code executed when a relation is visited.
