--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
@@ -92,7 +92,7 @@
 		</dependency>
 		
         <dependency>
-            <groupId>fr.inria.diverse</groupId>
+            <groupId>fr.inria.diverse.kompren</groupId>
             <artifactId>fr.inria.diverse.kompren.model.edit</artifactId>
             <version>${kompren.version}</version>
         </dependency>
