Xtext editor improved

--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/xtend-gen/fr/inria/diverse/kompren/ui/labeling/.gitignore
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/xtend-gen/fr/inria/diverse/kompren/ui/labeling/.gitignore
@@ -1,2 +1,4 @@
 /.KomprenDescriptionLabelProvider.java._trace
 /.KomprenLabelProvider.java._trace
+/KomprenDescriptionLabelProvider.java
+/KomprenLabelProvider.java
