--- a/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
@@ -31,10 +31,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -43,14 +43,14 @@
   
     <dependencies>
   		<dependency>
-			<groupId>fr.inria.diverse</groupId>
+			<groupId>fr.inria.diverse.kompren</groupId>
 			<artifactId>fr.inria.diverse.kompren.model</artifactId>
 			<version>${project.version}</version>
   		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
   	</dependencies>
