--- a/kompren-core/fr.inria.diverse.kompren.model/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.model/pom.xml
@@ -21,6 +21,7 @@
 		<resources>
 			<resource>
 				<directory>model</directory>
+				<targetPath>model</targetPath>
 			</resource>
 			<resource>
 				<directory>.</directory>
