--- a/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
@@ -4,7 +4,7 @@
   
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
-        <artifactId>fr.inria.diverse.kompren.root</artifactId>
+        <artifactId>fr.inria.diverse.kompren.editor.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
   
@@ -90,24 +90,5 @@
 			</plugin>		
 		</plugins>
 	</build>
-  
-  
-    <dependencies>
-		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>org.eclipse.xtext.xtext</artifactId>
-			<version>${xtend.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>org.eclipse.xtext.xbase</artifactId>
-			<version>${xtend.version}</version>
-		</dependency>
-  		<dependency>
-			<groupId>fr.inria.diverse.kompren</groupId>
-			<artifactId>fr.inria.diverse.kompren.model</artifactId>
-			<version>${project.version}</version>
-  		</dependency>
-  	</dependencies>
 </project>
 
