config and code updated to the new k3 structure

--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -74,8 +74,8 @@
 			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.inria.diverse.k3</groupId>
-			<artifactId>fr.inria.diverse.k3.core</artifactId>
+			<groupId>fr.inria.diverse.k3.al</groupId>
+			<artifactId>fr.inria.diverse.k3.al.annotationprocessor</artifactId>
 			<version>${kermeta.version}</version>
 		</dependency>
 		<dependency>
