--- a/kompren-core/fr.inria.diverse.kompren.prettyprinter/build.properties
+++ b/kompren-core/fr.inria.diverse.kompren.prettyprinter/build.properties
@@ -3,3 +3,5 @@ source.. = src/main/xtend-gen/,\
            src/main/kompren-gen/
 bin.includes = META-INF/,\
                .
+output.. = bin/
+src.excludes = src/main/java/
