extension names changed

--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.properties
@@ -36,7 +36,7 @@ _UI_KomprenModelWizard_description = Create a new Kompren model
 _UI_KomprenEditor_label = Kompren Model Editor
 
 _UI_KomprenEditorFilenameDefaultBase = myslicer
-_UI_KomprenEditorFilenameExtensions = kompren
+_UI_KomprenEditorFilenameExtensions = komprenx
 
 _UI_Wizard_label = New
 
