Adding a feature to define the output metamodel in the case of strict slicing.

--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/plugin.properties
@@ -57,3 +57,5 @@ _UI_Slicer_logVisitClass_feature = Log Visit Class
 _UI_Slicer_logVisitClass_description = Xtend code executed when a class is visited.
 _UI_Slicer_logVisitRelation_feature = Log Visit Relation
 _UI_Slicer_logVisitRelation_description = Xtend code executed when a relation is visited.
+_UI_Slicer_outputMetamodel_feature = Output Metamodel
+_UI_Slicer_outputMetamodel_description = The output metamodel to use when  defining a strict slicer. The provided metamodel must be a sub-type of one of the input metamodels.
