--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/plugin.xml
@@ -23,7 +23,7 @@
             id="kompren.presentation.KomprenEditorID"
             name="%_UI_KomprenEditor_label"
             icon="icons/full/obj16/KomprenModelFile.gif"
-            extensions="komprenx"
+            extensions="kompren"
             class="kompren.presentation.KomprenEditor"
             contributorClass="kompren.presentation.KomprenActionBarContributor">
       </editor>
